# glee_opus4.5

./: .gitignore  Cargo.toml  LICENSE  README.md  aggregate_codebase.py  package.json  pnpm-lock.yaml
.orchids/: orchids.json
apps/desktop/: index.html  package.json  tailwind.config.js
apps/desktop/scripts/: dev.js  tauri-dev.js
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_initial_schema.sql  002_add_summaries.sql  002_enhanced_characters.sql  003_add_memories.sql  004_lorebook_vectors.sql  005_embeddings.sql  006_fix_schema.sql
apps/desktop/src-tauri/src/: database.rs  entities.rs  error.rs  lib.rs  main.rs  repositories.rs  state.rs
apps/desktop/src-tauri/src/commands/: character.rs  conversation.rs  download.rs  export.rs  lorebook.rs  message.rs  mod.rs  persona.rs  settings.rs  setup.rs  system.rs
apps/desktop/src-tauri/src/services/: embeddings.rs  memory.rs  mod.rs
apps/desktop/src-tauri/src/setup/: migrations.rs  mod.rs  paths.rs
apps/desktop/src-tauri/src/sidecar/: mod.rs
apps/desktop/src-tauri/src/workers/: download_worker.rs  mod.rs  queue_worker.rs
apps/desktop/src/components/character/: AvatarUploader.tsx  CharacterBrowser.tsx  CharacterCard.tsx  CharacterCreator.tsx  CharacterDetail.tsx  CharacterEditor.tsx  GreetingEditor.tsx  ImportDialog.tsx
apps/desktop/src/components/chat/: BranchNavigator.tsx  CharacterInfoPanel.tsx  ChatErrorBoundary.tsx  ChatHeader.tsx  ChatInput.tsx  ChatView.tsx  GroupChatIndicator.tsx  MessageActions.tsx  MessageBubble.tsx  MessageList.tsx  StreamingMessage.tsx  TypingIndicator.tsx
apps/desktop/src/components/conversation/: ConversationCreator.tsx  ConversationItem.tsx  ConversationList.tsx  GroupChatCreator.tsx
apps/desktop/src/components/layout/: AppShell.tsx  ContactsList.tsx  Header.tsx  IconSidebar.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
apps/desktop/src/components/lorebook/: EntryEditor.tsx  KeywordInput.tsx  LorebookAttacher.tsx  LorebookEditor.tsx  LorebookList.tsx
apps/desktop/src/components/onboarding/: DownloadProgress.tsx  SetupComplete.tsx  WelcomeScreen.tsx
apps/desktop/src/components/persona/: PersonaCard.tsx  PersonaEditor.tsx  PersonaList.tsx  PersonaSelector.tsx
apps/desktop/src/components/settings/: AppearanceSettings.tsx  DataSettings.tsx  GenerationSettings.tsx  (+3 more)
apps/desktop/src/config/: downloads.ts
apps/desktop/src/hooks/: useAvatarUrl.ts  useBranching.ts  useCharacters.ts  useChat.ts  useConversations.ts  useDownload.ts  useLorebooks.ts  useModelStatus.ts  usePersonas.ts  useSettings.ts  useSmartSetup.ts  useTauriEvent.ts
apps/desktop/src/lib/: commands.ts  constants.ts  events.ts  format.ts  utils.ts
apps/desktop/src/stores/: characterStore.ts  chatStore.ts  conversationStore.ts  downloadStore.ts  index.ts  lorebookStore.ts  personaStore.ts  settingsStore.ts  uiStore.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/types/: character.ts  conversation.ts  events.ts  index.ts  lorebook.ts  message.ts  persona.ts  settings.ts
docs/: ARCHITECTURE.md  CODEBASE_ANALYSIS_REPORT.md  COMPREHENSIVE_PROJECT_REPORT.md  DEVELOPMENT.md
resources/: test_character.json
resources/characters/: starter_character.json
resources/prompts/: default_system.txt
scripts/: dev-setup.sh  download-sidecar.ps1  download-sidecar.sh
(+17 files in other folders)
