[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = "2.0"
tauri-build = "2.0"
async-stream = "0.3"