[package]
name = "glee"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
reqwest = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = "0.3"
base64 = "0.21"
sha2 = "0.10"
parking_lot = "0.12"
directories = "5.0"
zip = "6.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }
