[package]
name = "glee"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
base64 = "0.21"
sha2 = "0.10"
parking_lot = "0.12"
directories = "5.0"
zip = "6.0.0"
sqlite-vec = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }
